xcb-proto (1.6-3) UNRELEASED; urgency=low

  * Remove Jamey Sharp and Josh Triplett from the Uploaders list
    (closes: #568275).
  * Make the packages Multi-Arch: foreign.
  * Add single-debian-patch to debian/source/options because they broke
    dpkg-source (again).

 -- Julien Cristau <jcristau@debian.org>  Sat, 12 Nov 2011 01:02:50 +0100

xcb-proto (1.6-2) unstable; urgency=low

  * Drop cdbs in favor of dh 7 (Closes: #564351)

 -- Julien Danjou <acid@debian.org>  Tue, 12 Jan 2010 10:54:16 +0100

xcb-proto (1.6-1) unstable; urgency=low

  * New upstream release
  * Switch to format 3.0
  * Bump standard version

 -- Julien Danjou <acid@debian.org>  Wed, 02 Dec 2009 10:16:19 +0100

xcb-proto (1.5-1) unstable; urgency=low

  * New upstream release.

 -- Julien Danjou <acid@debian.org>  Fri, 29 May 2009 09:14:15 +0200

xcb-proto (1.4-1) unstable; urgency=low

  * New upstream release.

 -- Julien Danjou <acid@debian.org>  Tue, 17 Feb 2009 11:22:17 +0100

xcb-proto (1.3-1) experimental; urgency=low

  * New upstream release.
  * Add myself as uploader.
  * Bump standard version.
  * Add ${misc:Depends} in debian/control.
  * Move homepage out of description, it has its own field.
  * Move python-xcbgen in section python.

 -- Julien Danjou <acid@debian.org>  Fri, 02 Jan 2009 11:32:07 +0100

xcb-proto (1.2-0.1) experimental; urgency=low

  * New upstream release.
  * New python-xcbgen package.
  * Run autoreconf at build time, update clean rule to match.

 -- Julien Cristau <jcristau@debian.org>  Wed, 12 Nov 2008 21:07:15 +0100

xcb-proto (1.1-1) unstable; urgency=low

  * New upstream release.

 -- Jamey Sharp <sharpone@debian.org>  Tue, 06 Nov 2007 13:37:24 -0800

xcb-proto (1.0-2) unstable; urgency=low

  * Change XS-X-Vcs-Git to XS-Vcs-Git.
  * Add XS-Vcs-Browser field.
  * Upload to unstable.

 -- Josh Triplett <josh@freedesktop.org>  Mon, 21 May 2007 13:06:31 -0700

xcb-proto (1.0-1) experimental; urgency=low

  * New upstream release.