@@ -3,7 +3,12 @@ Section: libdevel
 Priority: optional
 Maintainer: XCB Developers <xcb@lists.freedesktop.org>
 Uploaders: Julien Danjou <acid@debian.org>
-Build-Depends: debhelper (>= 7.0.50~), libxml2-utils, python-support, automake
+Build-Depends:
+ debhelper (>= 7.0.50~),
+ dh-autoreconf,
+ libxml2-utils,
+ python-support,
+ automake,
 Standards-Version: 3.8.3
 Homepage: http://xcb.freedesktop.org
 XS-Vcs-Git: git://anongit.freedesktop.org/git/xcb/proto
