@@ -1,8 +1,4 @@
 #!/usr/bin/make -f
 
-override_dh_auto_configure:
-	autoreconf -vfi
-	dh_auto_configure
-
 %:
-	dh $@
+	dh $@ --with autoreconf
